--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "bootstrap": "4.1.1",
     "bootswatch": "^5.0.1",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^6.2.0",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.5.4",
