--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "bootswatch": "^5.0.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^14.0.0",
